--- a/src/app/feature/CursoModule/mis-cursos/mis-cursos.component.html
+++ b/src/app/feature/CursoModule/mis-cursos/mis-cursos.component.html
@@ -12,9 +12,9 @@
              (mouseenter)="onMouseEnter(curso.id)"
              (mouseleave)="onMouseLeave()"
              (@cardAnimation.done)="onAnimationDone($event, curso.id)">
-      <h3>{{ curso.nombre }}</h3>
+      <h3>{{ curso.nombreCurso }}</h3>
       <p>Periodo: {{ curso.periodo }}</p>
-      <p>Docente: {{ curso.docente }}</p>
+      <p>Docente: {{ curso.nombreProfe + ' '+ curso.apelliProfe }}</p>
       <p>Tipo:{{curso.nombreTipo}}</p>
 
         <p>{{ curso.horario }}</p>
