--- a/src/app/feature/LoginModule/login/login.component.html
+++ b/src/app/feature/LoginModule/login/login.component.html
@@ -28,7 +28,7 @@
         </mat-form-field>
 
         <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
-          Login
+          Ingresar
         </button>
       </form>
       
