--- a/src/app/feature/profesoresModule/dialog-curso-profes/dialog-curso-profes.component.html
+++ b/src/app/feature/profesoresModule/dialog-curso-profes/dialog-curso-profes.component.html
@@ -22,7 +22,7 @@
           </mat-select>
         </mat-form-field>
 
-        <button mat-raised-button color="primary" type="submit" [disabled]="!selectionForm.valid">Submit</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!selectionForm.valid">Añadir</button>
       </form>
     </mat-card-content>
   </mat-card>
