--- a/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
+++ b/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
@@ -32,7 +32,7 @@
 
       <ng-container matColumnDef="docente">
         <th mat-header-cell *matHeaderCellDef> Docente </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombreProfe + ' '+ element.apelliProfe}} </td>
+        <td mat-cell *matCellDef="let element">  {{ element.nombreProfe ? (element.nombreProfe + ' ' + element.apellidoProfe) : '-' }} </td>
       </ng-container>
 
       <ng-container matColumnDef="horario">
